--- a/talks/talks/quals/how_pt1-tidalsim_v1.jinja2
+++ b/talks/talks/quals/how_pt1-tidalsim_v1.jinja2
@@ -189,6 +189,8 @@ cycles,instret
   <img class="fragment" src="./figs/multi-level-sim/aha-mont64_results.svg" />
 </section>
 
+<!-- Add box and whiskers IPC error plot -->
+
 <section>
   <h2>Limitations and Final Prototype</h2>
 
